edit some things in the final file.

--- a/HTMl/Final.html
+++ b/HTMl/Final.html
@@ -25,7 +25,7 @@
     <div>
       <div id="first_img">
         <img
-          src="../HTMl/Imga/Wallpaper_IAA_Range_desktop.jpg"
+          src="../HTML/Imga/Wallpaper_IAA_Range_desktop.jpg"
           alt=""
           id="use_first_img"
         />
@@ -65,7 +65,7 @@
               <li><a href="Blog.html">Blog</a></li>
               <li><a href="#Location">Location</a></li>
               <li>
-                <a href="../HTMl/Login_page.html" id="create-account"
+                <a href="../HTML/Login_page.html" id="create-account"
                   >Create Account</a
                 >
               </li>
@@ -90,7 +90,7 @@
             <li><a href="Blog.html">Blog</a></li>
             <li><a href="#Location">Location</a></li>
             <li>
-              <a href="../HTMl/Login_page.html" id="create-account-sub"
+              <a href="../HTML/Login_page.html" id="create-account-sub"
                 >Create Account</a
               >
             </li>
@@ -122,7 +122,7 @@
           </div>
         </div>
         <img
-          src="./Imga/faisal-khan-truck-xt-8x4-3d-model-max-obj-fbx-c4d-ma-removebg-preview (1).png  "
+          src="./Imga/faisal-khan-truck-xt-8x4-3d-model-max-obj-fbx-c4d-ma-removebg-preview(1).png"
           alt=""
           id="trak_img"
         />
@@ -206,7 +206,7 @@
                     <i class="ri-arrow-down-s-fill" style="cursor: pointer"></i>
                   </div>
                   <div class="all-vehical-cmp">
-                    <a href="../HTMl/Two-Wheelers.html" class="vehicles">
+                    <a href="../HTML/Two-Wheelers.html" class="vehicles">
                       <img
                         src="./Imga/—Pngtree—delivery rider on scooter_15515845.png"
                         alt=""
