--- a/HTMl/index.html
+++ b/HTMl/index.html
@@ -59,7 +59,7 @@
           </div>
           <div class="links">
             <ul>
-              <li><a href="Final.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="./About.html">About</a></li>
               <li><a href="#service">Service</a></li>
               <li><a href="Blog.html">Blog</a></li>
